--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "web_",
   "version": "1.0.0",
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/mocSpace/temple-web.git"
+  },
   "description": "核心项目",
   "main": "index.html",
   "scripts": {
